--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,4 @@
+<link href="homepage.css" rel="stylesheet">
 <title>Explorer| the application for evaluating</title>
 <div class="bg-img"> 
   <form action="/action_page.php" class="container">
