--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,8 @@
+<html>
+<head>
+<link rel="stylesheet" href="homepage.css"/>
 <title>Explorer| the application for evaluating</title>
-<div class="bg-img"> 
+<body>
   <form action="/action_page.php" class="container">
     <h1>Login</h1>
     <label for="email"><b>Email</b></label>
@@ -8,8 +11,10 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
     <button type="submit" class="btn">Login</button>
   </form>
-</div>
-
+<div class="bg-img"></div>
+</body>
+</head>
+</html>
 
 
 
