first page done

--- a/homepage.html
+++ b/homepage.html
@@ -22,15 +22,23 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <div class = "regis">
-        <p><a href="https://www.w3schools.com/html/">Register</a></p>
+        <p style="line-height: 50%;"><a href="https://www.w3schools.com/html/">Register</a></p>
     </div>
 
-    <div class="btn-group">
+    <!-- <div class="btn-group"> -->
         <div class= "log-btn">
             <button>Login</button>
         </div>
-
-    </div>
+        <div class= "fb-btn">
+            <button>Login with Facebook</button>
+        </div>
+        <div class= "tw-btn">
+            <button>Login with Twitter</button>
+        </div>
+        <div class= "gg-btn">
+            <button>Login with Google+</button>
+        </div>
+    <!-- </div> -->
   </form>
 </div>
 
