--- a/homepage.html
+++ b/homepage.html
@@ -23,8 +23,8 @@
       <label for="username"><b>Username</b></label><br>
       <input type="text" name="username" required><br>
 
-      <label for="fristname"><b>Frist Name</b></label><br>
-      <input type="text" name="fristname" required><br>
+      <label for="firstname"><b>First Name</b></label><br>
+      <input type="text" name="firstname" required><br>
 
       <label for="lastname"><b>Last Name</b></label><br>
       <input type="text" name="lastname" required><br>
@@ -37,9 +37,9 @@
 
       <label for="conpsw"><b>Confirm Password</b></label><br>
       <input type="password" name="conpsw" required><br>
-      <!-- <div class="regi"> -->
+    
       <div class="regis-btn">
-        <button type="button" style="margin-top: 30px;">Register?</button>
+        <button type="button" style="margin-top: 30px;">Register</button>
       </div>
     </div>
   </div>
@@ -52,7 +52,7 @@
       <input type="password" placeholder="Enter Password" name="psw" required>
   
       <div class = "regis">
-          <p style="line-height: 50%;" onclick="openForm()"><a>Register</a></p>
+          <p style="line-height: 50%;" onclick="openForm()"><a>Register?</a></p>
       </div>
       <div class= "log-btn">
           <button>Login</button>
