--- a/homepage.html
+++ b/homepage.html
@@ -8,6 +8,7 @@
 <head>
 <link rel="stylesheet" href="homepage.css"/>
 <link rel="stylesheet" href="registerpage.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="registerpage.js"></script>
 <meta charset="utf-8">
 
@@ -46,23 +47,27 @@
         <span class="close" onclick="closeForm()">&times;</span>
         <h1 style="font-size: 32; margin-top: 20px;"> Create your account</h1>
         <label for="username"><b></b></label><br>
+        <i class="fa fa-user icon"></i>
         <input type="text" placeholder="Username" name="username" required><br>
   
-        <label for="firstname"><b></b></label><br>
+        <!-- <label for="firstname"><b></b></label><br>
         <input type="text" placeholder="Firstname" name="firstname" required><br>
   
         <label for="lastname"><b></b></label><br>
-        <input type="text" placeholder="Lastname" name="lastname" required><br>
+        <input type="text" placeholder="Lastname" name="lastname" required><br> -->
   
         <label for="email"><b></b></label><br>
+        <i class="fa fa-envelope icon"></i>
         <input type="text" placeholder="Email" name="email" required><br>
   
         <label for="psw"><b></b></label><br>
+        <i class="fa fa-key icon"></i>
         <input type="password" placeholder="Password" name="psw" required><br>
   
         <label for="conpsw"><b></b></label><br>
+        <i class="fa fa-key icon"></i>
         <input type="password" placeholder="Confirm Password " name="conpsw" required><br>
-      
+    
         <div class="regis-btn">
           <button type="button" style="margin-top: 30px;">Register</button>
         </div>
